ci: 更新 GitHub Actions 构建配置
- 将构建命令从 shadowJar 改为 build
-

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,8 +41,7 @@ jobs:
         env:
           WS_SERVER_URL: ${{ secrets.WS_SERVER_URL }}
         run: |
-          ./gradlew shadowJar \
-            -PwsServerUrl="$WS_SERVER_URL" \
+          ./gradlew build \
             -x test \
             -Dorg.gradle.daemon=false
 
