ci:优化 GitHub 发布 Action 配置
- 移除发布名称中的固定前缀 "HuHoBot"
- 保留仅使用版本号作为发布名称，提高灵活性和可读性

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -107,7 +107,7 @@ jobs:
         uses: softprops/action-gh-release@v1  # 改用更可靠的 Action
         with:
           tag_name: ${{ steps.changelog.outputs.tag_name }}
-          name: HuHoBot ${{ steps.changelog.outputs.tag_name }}
+          name: ${{ steps.changelog.outputs.tag_name }}
           body: |
             ${{ steps.changelog.outputs.body }}
 
