feat(security): 添加 BotClient连接验证功能
- 新增 BotClientConfig 类用于加载配置文件
- 修复 BotClient可被欺骗连接
- 更新版本号至 1.0.6

--- a/.gitignore
+++ b/.gitignore
@@ -188,3 +188,8 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
+/temp/
+
+*.key
+*.pem
+*.p12
