feat(commands): 添加控制台指令系统并实现封禁功能
- 新增 baseCommand 抽象类和多个具体命令实现类
- 实现封禁数据库初始化和封禁相关功能
- 添加控制台指令输入和处理逻辑
- 优化客户端连接和断开连接的日志输出
- 修复部分代码结构和逻辑问题

--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'cn.huohuas001'
-version = '1.0.6'
+version = '1.0.8'
 
 repositories {
     mavenCentral()
@@ -23,6 +23,7 @@ dependencies {
     implementation "org.slf4j:slf4j-api:2.0.16"
     implementation "ch.qos.logback:logback-classic:1.5.16"
     implementation "ch.qos.logback:logback-core:1.5.16"
+    implementation 'org.xerial:sqlite-jdbc:3.42.0.0'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
