--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,10 @@
-server.port=8888
+server.port=2087
 logging.level.root=INFO  
 logging.level.com.example=DEBUG  
 server.tomcat.max-http-header-size=81920
+# ?? HTTPS ????? 8443?
+server.ssl.enabled=false
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-password=huhobot
+server.ssl.key-alias=huhobot
