refactor(client): 重构客户端连接和消息处理机制
- 新增 ClientType 枚举，用于区分不同类型的客户端
- 重构 BaseClient 类，增加 clientType 属性
- 新增 BotMsgPack 类，用于封装 Bot 客户端的消息包
- 新增 MessagePack 类，用于封装消息包
- 新增 MessageTarget 枚举，用于区分消息目标
- 重构 BotClient 和 ServerClient 类，使用新的消息包结构
- 新增心跳处理和重新握手逻辑
- 优化线程池和连接管理

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,17 @@ server.port=2087
 logging.level.root=INFO  
 logging.level.com.example=DEBUG  
 server.tomcat.max-http-header-size=81920
-# ?? HTTPS ????? 8443?
+# SSL
 server.ssl.enabled=false
 server.ssl.key-store-type=PKCS12
 server.ssl.key-store=classpath:keystore.p12
 server.ssl.key-store-password=huhobot
 server.ssl.key-alias=huhobot
+#Memory
+spring.websocket.max-text-message-size=65536
+spring.websocket.max-binary-message-size=65536
+server.tomcat.max-swallow-size=65536
+server.tomcat.max-http-post-size=1048576
+spring.websocket.session.timeout=300000
+server.tomcat.max-connections=2000
+server.tomcat.max-threads=500
